--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,45 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body{
+    width: 1080px;
+    font-family: 'Exo', sans-serif;
+    margin: 0 auto;
+    
+    color: #FFFFFF;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container, 
+header,
+.weatherPage{
+    background-color: #1b173d;
 }
 
-* {
-  box-sizing: border-box;
+
+
+nav{
+    padding: 1rem;
+    border-bottom: 1px solid #f70008;
+}
+
+nav ul {
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+nav a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.welcome{
+    padding: 1rem;
+}
+
+.pictureOfDay{
+    margin-top: 3rem;
+}
+
+img{
+    max-width: 1000px;
+    max-height: 780px;
 }
